# up2d8

./: .deployment  .env.development  .env.example  .env.production  .gitignore  AIGeneratorPrompt.md  AI_PERSONALIZATION_IMPLEMENTATION.md  ANALYTICS_SYSTEM.md  AUTH_SETUP.md  App.tsx  AzuriteConfig  DEBUG_DAILY_DIGEST.md  DEPLOYMENT-QUICKSTART.md  DEPLOYMENT.md  ENTRA_AUTH_SUMMARY.md  GIT_SETUP.md  IOS-APP-STORE-SETUP-GUIDE.md  MOBILE_APP_REBUILD_COMPLETE.md  MOBILE_APP_REBUILD_PLAN.md  MONGODB_MIGRATION_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  PHASE_7_SUMMARY.md  POST_MERGE_SETUP.md  PRODUCTION_SETUP_SUMMARY.md  PROJECT_STATUS.md  PWA-INSTALLATION-GUIDE.md  QUICK_START.md  QUICK_START_AFTER_MERGE.md  README.md  REORGANIZATION_SUMMARY.md  SCRAPING_TEST_RESULTS.md  TESTING_INSTRUCTIONS.md  check_articles.sh  claude.md  create_test_user.sh  docker-compose.yml  (+22 more)
.ai/: GUIDE.md  INDEX 2.md  INDEX.md  preferences
.claude/: CLAUDE.md  settings.local 2.json  settings.local 3.json
api/: function_app.py  requirements.txt
backend/: .funcignore  Dockerfile.local  Dockerfile.test  alembic.ini  celerybeat-schedule  function_app.py  host.json  pytest.ini  requirements-azure.txt  requirements.txt  reset_password.py  startup.txt  test_agent.py  test_digest_preview.html  test_websocket_chat.py
components/: ChatInput.tsx  ChatWindow.tsx  ContextPrompt.tsx  Logo.tsx  Message.tsx  Nav.tsx  Sources.tsx  ThemeSwitcher.tsx  TopicActionModal.tsx  TopicCard.tsx
context/: ThemeContext.tsx
docs/: OAUTH_SETUP_GUIDE.md  (+5 more)
(+229 files in other folders)
