[project]
name = "up2d8"
version = "1.0.0"
description = "UP2D8 - Personal news digest and information management platform"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["packages/backend-api/tests", "packages/functions/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
